# mlops-desafio-tecnico

./: 404.html  CONTRIBUTING.md  Dockerfile  Makefile  README.md  __init__.py  configure_poetry_env.sh  index.html  mkdocs.yaml  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.devcontainer/: devcontainer.json
.github/workflows/: build_docs.yml  main.yml
docs/: api.md  data_service.md  index.md  iris_router.md  main.md  models.md  modules.md  prediction_service.md  schemas.md
docs/api/: config.md  data_ingestion.md
docs/api/services/: data_service.md  prediction_service.md
docs/api/v1/: main.md
docs/api/v1/models/ml/: iris_train.md
docs/api/v1/models/schemas/: iris_schema.md
docs/api/v1/routers/: iris_router.md
mlops_desafio_tecnico/desafio1/app/: main.py  models.py  schemas.py  service.py
modules/: index.html
saved_models/: iris_knn_v1_20240628.pkl
search/: search_index.json
src/desafio1/: Dockerfile  README.md
src/desafio1/api/: config.py  data_ingestion.py  service.py
src/desafio1/api/auth/: auth_handler.py
src/desafio1/api/common/: models.py
src/desafio1/api/services/: data_service.py  prediction_service.py
src/desafio1/api/v1/: dependencies.py  main.py
src/desafio1/api/v1/routers/: iris_router.py
src/desafio1/api/v1/routes/: iris_predict.py
src/desafio1/models/ml/: iris_train.py  train.py
src/desafio1/models/schemas/: iris_schema.py
src/desafio1/saved_models/: iris_dt_v1_20240626.pkl  iris_knn_v1_20240626.pkl  iris_lr_v1_20240624.joblib  iris_lr_v1_20240626.pkl  iris_nb_v1_20240626.pkl
src/desafio1/tests/: test_data_service.py  test_iris_router.py
tests/: test_foo.py
